@@ -1,3 +1,8 @@
+2006-09-14  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl:   FR 1482926 - add an /eval command to evaluate
+	                short tcl scripts.
+
 2006-09-05  Kevin B. Kenny  <kennykb@acm.org>
 
 	* tkchat.tcl - Added hooks to KHIM (Kevin's Hacky Input Method)
